fix: change URL constructor to URI